# theme-generation

./: .gitignore  .nvim.lua  CHANGELOG.md  Cargo.toml  README.md  Test Theme.json  color.js  dark.toml  expectations  full.toml  init.lua  lite.toml  mise.toml  moon-dark-color-theme.json  package.json  reversed-theme.toml  rustc-ice-2024-09-11T22_43_05-43660.txt  rustc-ice-2024-09-11T22_43_05-43661.txt  rustc-ice-2024-09-11T22_43_08-43738.txt  rustc-ice-2024-09-11T22_43_08-43739.txt  rustc-ice-2024-09-11T22_43_14-43809.txt  rustc-ice-2024-09-11T22_43_14-43810.txt  rustc-ice-2024-09-11T22_43_28-43884.txt  rustc-ice-2024-09-11T22_43_28-43885.txt  substitutor.py  theme-reverse.json.template  theme.json.template  vsc-extension-quickstart.md
.zed/: tasks.json
accents/: Midnight Coder Indents.toml
playground/: ReadMe.md  Yue Newmoon NEW.toml  Yue Newmoon.toml  apple.json  kittydark.json  kittylight.json  test.json  test.json.template  theme-name.json  theme-reverse.json.template  yue-test.json
src/: main.rs  prelude.rs
substitutors/: v3-substitutor.py  v4-ai-substitutor.py  v4-substitutor.py  v5-substitutor.py  v6-substitutor.py  v7-substitutor.py
templates/: new-hls.json.template  simple.json.template  v1-theme.json.template  v1-theme.toml  v2-theme.json.template  v3-theme.toml  v4-theme.json.template  v6-theme.json.template  v6-theme.toml  v7-theme.template
test-themes/: Cyan Light.toml  cyan-light1.json  cyan-light2.json  test.json  test.json.template  theme-reverse.json
theme-testing/: Code Playground  prime.js
themes/: yue-fullmoon-color-theme.json  (+3 more)
(+254 files in other folders)
